--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -24,7 +24,7 @@ jobs:
               { \
                 \"title\": \"${{ github.workflow }} #${{ github.run_number }}\", \
                 \"title_link\": \"${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}\", \
-                \"color\": \"#ff0000\"\", \
+                \"color\": \"#ff0000\", \
                 \"fields\": [ \
                   \"title\": \"Branch\", \
                   \"value\": \"${{ github.event.pull_request.head.ref }}\", \
