--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -19,15 +19,15 @@ jobs:
         run: >
           jq -n
           "{ \
-            \"text\": \"`echo hoge`\", \
-            \"attachments\": [ \
+            text: \"`echo hoge`\", \
+            attachments: [ \
               { \
-                \"title\": \"${{ github.workflow }} #${{ github.run_number }}\", \
-                \"title_link\": \"${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}\", \
-                \"color\": \"\#ff0000\", \
-                \"fields\": [ \
-                  \"title\": \"Branch\", \
-                  \"value\": \"${{ github.event.pull_request.head.ref }}\" \
+                title: \"${{ github.workflow }} \u0023${{ github.run_number }}\", \
+                title_link: \"${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}\", \
+                color: \"\u0023ff0000\", \
+                fields: [ \
+                  title: \"Branch\", \
+                  value: \"${{ github.event.pull_request.head.ref }}\" \
                 ] \
               } \
             ] \
